add bootstrap and jQuery

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <h1>My First Bootstrap Page</h1>
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
 
