add bootstrap, jQuery, container-fluid

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+    <div class="container-fluid">
         <h1>My First Bootstrap Page</h1>
         <p>Hello world! This is HTML5 Boilerplate.</p>
-
+    </div>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
